<resources>

    <string name="app_name">CartaDeVinhos</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_carta_de_vinhos">Carta de Vinhos</string>
    <string name="vazio"></string>
    <string name="nome_app">Carta de Vinhos</string>
    <string name="tela2_frase1">Por onde deseja começar a escolher o seu vinho?</string>
    <string name="img_desc">Nenhuma</string>
    <string name="tela2_vinho">Tipo de Vinho</string>
    <string name="tela2_uva">Tipo de Uva</string>
    <string name="espumantesTipo">Espumantes e Frisantes</string>
    <string name="brancosSecos">Brancos Secos</string>
    <string name="tintosSecos">Tintos Secos</string>
    <string name="vinhosTacas">Vinhos em Taça 187 ml</string>

</resources>